--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>TechCon 2024</h1>
+
+      <nav>
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./schedule.html">Schedule</a></li>
+          <li><a href="./register.html">Register</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ullam
+          vitae voluptatibus libero odit, odio maxime doloribus minima veritatis
+          cupiditate sequi possimus at corporis culpa? Sunt quasi mollitia iste
+          officiis.
+        </p>
+
+        <video src="" controls></video>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon.</p>
+    </footer>
+  </body>
 </html>
