--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -3,7 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>About TechCon 2024</h1>
+
+      <nav>
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./schedule.html">Schedule</a></li>
+          <li><a href="./register.html">Register</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <article>
+        <h2>History</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam sint in
+          doloribus, illum quos enim veritatis magnam asperiores id nihil.
+        </p>
+        <img src="./project.jpg" alt="History image" />
+      </article>
+      <article>
+        <h2>Mission</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam sint in
+          doloribus, illum quos enim veritatis magnam asperiores id nihil.
+        </p>
+        <img src="./project.jpg" alt="Mission image" />
+      </article>
+      <article>
+        <h2>Past Speakers</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam sint in
+          doloribus, illum quos enim veritatis magnam asperiores id nihil.
+        </p>
+        <img src="./project.jpg" alt="Past Speakers" />
+      </article>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon.</p>
+    </footer>
+  </body>
 </html>
