--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -3,7 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Schedule</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Schedule for TechCon 2024</h1>
+
+      <nav>
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./schedule.html">Schedule</a></li>
+          <li><a href="./register.html">Register</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <table>
+        <thead>
+          <tr>
+            <td><strong>Time</strong></td>
+            <td><strong>Session</strong></td>
+            <td><strong>Speaker</strong></td>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>24</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Micheal</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon.</p>
+    </footer>
+  </body>
 </html>
