--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -21,11 +21,14 @@
 
     <main>
       <table>
+        <caption>
+          Detailed Schedule of Events for TechCon 2024
+        </caption>
         <thead>
           <tr>
-            <td><strong>Time</strong></td>
-            <td><strong>Session</strong></td>
-            <td><strong>Speaker</strong></td>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
           </tr>
         </thead>
 
