--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -3,7 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Register</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Register for TechCon 2024</h1>
+
+      <nav>
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./schedule.html">Schedule</a></li>
+          <li><a href="./register.html">Register</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <form action="" method="post">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" name="name" id="name" />
+        </div>
+
+        <div>
+          <label for="email">Email:</label>
+          <input type="text" name="email" id="email" />
+        </div>
+
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" />
+        </div>
+
+        <div>
+          <label for="msg">Terms and Conditions:</label>
+          <input type="checkbox" />
+        </div>
+        <button type="submit">Register Now</button>
+      </form>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon.</p>
+    </footer>
+  </body>
 </html>
