--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -3,7 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Contact Us</h1>
+
+      <nav>
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./schedule.html">Schedule</a></li>
+          <li><a href="./register.html">Register</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <div id="email">
+          <p>Email</p>
+          <p>
+            <a href="mailto:abdulnsamba@gmail.com">abdulnsamba@gmail.com</a>
+          </p>
+        </div>
+
+        <div id="github">
+          <p>Github</p>
+          <p><a href="" target="_blank">abdul17rahman</a></p>
+        </div>
+
+        <div id="linkedin">
+          <p>Linkedin</p>
+          <p><a href="">abdul-rahman17</a></p>
+        </div>
+
+        <div id="twitter">
+          <p>Twitter</p>
+          <p><a href="">@ar_nsamba</a></p>
+        </div>
+
+        <div id="twitter">
+          <p>Map</p>
+          <iframe src="" frameborder="0"></iframe>
+        </div>
+      </section>
+      <form action="" method="post">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" name="name" id="name" />
+        </div>
+
+        <div>
+          <label for="email">Email:</label>
+          <input type="text" name="email" id="email" />
+        </div>
+
+        <div>
+          <label for="message">Message:</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon.</p>
+    </footer>
+  </body>
 </html>
