--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -24,7 +24,7 @@
         <div id="email">
           <p>Email</p>
           <p>
-            <a href="mailto:abdulnsamba@gmail.com">abdulnsamba@gmail.com</a>
+            <a href="mailto:email@example.com">mailto:email@example.com</a>
           </p>
         </div>
 
